			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.02c: *********************************

IMP/MAN: (01/21/05, SMR) Combined the Component menu into the Explorer panel,
     Also added the "Layer Visibility" dialog there (Bug #35, #67)

BUG: (01/21/05, SMR) Exports don't display when editing "down hierarchy in place" (Bug #164)
FIX: In PixelDrawing.java, must keep track of top-level window and draw exports properly.

BUG: (01/21/05, SMR) Scroll bars don't work right when editing "down hierarchy in place" (Bug #164)
FIX: In EditWindow.setScrollPositionUnsafe(), bottomScrollChanged(), and rightScrollChanged()
     must account for the in-place editing when dealing with the offset values.

BUG: (01/21/05, SMR) Auto-stitching doesn't connect pins.
FIX: In Technology.getShapeOfNode(), only exclude pin geometry if not doing electrical layers.

IMP/MAN: (01/20/05, GVG) Extra flag in DRC tab to stop checking after first error per node is found.

IMP: (01/20/05, GVG) Setting default colors for Artwork Arcs and Text Properties (in TextDescriptor.DescriptorPref)
(Bug #152)

BUG: (01/20/05, DN) Can't rename cell groups (Bug #167).
FIX: CircuitChanges.RenameCellGroup.doIt stores cells from group in
     array before renaming.

IMP: (01/19/05, SMR) Cleaned up use of "getUserNetlist".

IMP: (01/18/05, SMR) Improved GDS floating point output.  Code from Tom Valine <tomv@transmeta.com>.

IMP/MAN: (01/18/05, SMR) Removed "Update" button from "Attributes" dialog, have only "Done".
     All actions happen instantantly (Bug #78).

IMP/MAN: (01/18/05, SMR) "Props." button in "Arc Preferences" dialog by name field lets name info be edited (Bug #149).

BUG: (01/18/05, DN) "ElectricObject.isLinked()" can return true for objects of deleted cell.
FIX: Reimplement "isLinked()" so that it became the same as former "isActuallyLinked()".

IMP: (01/17/05, DN) Deterministic output of ELIB and ReadableDump: